@@ -1,8 +1,8 @@
 # --
 # Changes of OTRS
-# Copyright (C) 2001-2004 Martin Edenhofer <martin+code@otrs.org>
+# Copyright (C) 2001-2005 Martin Edenhofer <martin+code@otrs.org>
 # --
-# $Id: CHANGES,v 1.133 2004/12/23 11:51:54 martin Exp $
+# $Id: CHANGES,v 1.134 2005/02/10 11:48:09 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -164,6 +164,9 @@ CVS head
  - (2004/09/09) added ticket title support
 
 1.3.3 (200?-??-??)
+ - (2005/02/10) fixed generic agent - was not able to set new owner
+ - (2005/01/19) fixed bug 666 - INSERTs into 'ticket_history' fail sometimes
+ - (2005/01/07) fixed bug 659 - Escalation Notification Sent to Wrong Users
  - (2004/11/26) fixed remove of ticket link if just one exists
  - (2004/11/24) fixed new owner list in Kernel/Modules/AgentMove.pm
     (show just user with rw permission to selected queue)
